# opsys_2_bead

./: .gitignore  CMakeLists.txt  cmake_experimental.txt  i686_build.sh  i686_toolchain.cmake  plan.md  start.sh
dependencies/: CMakeLists.txt  pch.h
dependencies/console_interface/: CMakeLists.txt  console_dialogs.c  console_dialogs.h  input_control.c  input_control.h  input_control_regex.c  input_handlers.c  input_handlers.h
dependencies/database_manager/: CMakeLists.txt  UnregisteredWorkerEntry.c  UnregisteredWorkerEntry.h  database.h  database_macros.h  day_enum_conversion.c  day_enum_conversion.h  worker_database_managers.c  worker_database_managers.h  worker_entry.c  worker_entry.h
main/: CMakeLists.txt  main.c
processes/: CMakeLists.txt  Processes.c  Processes.h  pch.h
processes/datasets/: CMakeLists.txt  DailyTaskManager.c  DailyTaskManager.h
processes/datasets/database_manager/: CMakeLists.txt  database.h  day_enum_conversion.c  day_enum_conversion.h  worker_database_managers.c  worker_database_managers.h  worker_entry.c  worker_entry.h  working_days.h
resources/: vineyard_tasks.txt
resources/test_resource/: dailyTasks.txt  testVineyardTasks.txt
test/: CMakeLists.txt  DailyTaskManagerTest.cc  TestFixtures.hh  TestProcesses.cc  database_manager_test.cc  database_manager_test.cpp  database_manager_test.hh  input_control_test.cc  input_control_test.cpp
